<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:gravity="center"
        android:text="@string/title_app"
        android:textColor="#FFDE78"
        android:textSize="24sp"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/name_title" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/name_et"
            android:inputType="text"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/cmnd_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/cmnd_title" />

        <EditText
            android:id="@+id/cmnd_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/cmnd_et"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/degree_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:gravity="center"
        android:text="@string/degree_title"
        android:textColor="#FFDE78"
        android:textSize="20sp"
        android:padding="4dp"
        />

    <RadioGroup
        android:id="@+id/degree_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tc_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/tc_rbtn" />

        <RadioButton
            android:id="@+id/cd_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/cd_rbtn" />

        <RadioButton
            android:id="@+id/dh_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/dh_rbtn" />
    </RadioGroup>

    <TextView
        android:id="@+id/interest_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:gravity="center"
        android:text="@string/interest"
        android:textColor="#FFDE78"
        android:textSize="20sp"
        android:padding="4dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        >

        <CheckBox
            android:id="@+id/news_ckb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/news_ckb"
            />

        <CheckBox
            android:id="@+id/book_ckb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book_ckb" />

        <CheckBox
            android:id="@+id/coding_ckb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coding_ckb"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/addit_infor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="#2196F3"
        android:gravity="center"
        android:text="@string/addit_infor"
        android:textColor="#FFDE78"
        android:textSize="20sp"
        android:padding="4dp"
        />

    <EditText
        android:id="@+id/infor_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="top"
        android:minLines="3"
        android:maxLines="6"
        android:textSize="20sp"
        android:hint="@string/input_addit_in4"
        android:padding="16dp"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/send_btn"/>

</LinearLayout>